2008-07-26  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-start-file-process): Set
	query-on-exit flag. Kill temporary buffer.
	(tramp-process-sentinel): Remove defun.
	(tramp-do-copy-or-rename-file-out-of-band)
	(tramp-maybe-open-connection):Don't call it.

	* net/tramp-fish.el (tramp-fish-maybe-open-connection): Don't call
	`tramp-process-sentinel'.

	* net/tramp-smb.el (tramp-smb-maybe-open-connection): Don't call
	`tramp-process-sentinel'.

	* net/xesam.el (xesam-from): Remove defvar.
	(xesam-mode): Derive from `special-mode'.  Extend `xesam-mode-map'
	and `mode-line-position'.
	(xesam-refresh-entry): Remove argument `hit-number'.  Add debug
	information to the widgets.  Don't set `mode-line-position'.
	(xesam-refresh-search-buffer): Correct hit number computing.
	Don't set `mode-line-position'.
	(xesam-new-search): Add debug information to the mode line.

2008-07-25  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* diff-mode.el (diff-show-trailing-blanks): Renamed to
	diff-show-trailing-whitespaces.

2008-07-25  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/tex-mode.el (tex-compilation-parse-errors): Check for
	invalid filename strings when parsing tex errors (bug#376).

2008-07-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* menu-bar.el (menu-bar-file-menu): Fix typo.

2008-07-25  Juanma Barranquero  <lekktu@gmail.com>

	* play/solitaire.el (solitaire-mode-map): Define within defvar.
	(solitaire-mode): Define with `define-derived-mode'.
	(solitaire-insert-board, solitaire-right, solitaire-left, solitaire-up)
	(solitaire-down): Use "?\s" instead of "?\ "; use `when'.
	(solitaire-undo, solitaire-check): Use `when'.
	(solitaire-solve): Err out if the solitaire is already in progress.
	Use `when'.

	* descr-text.el (describe-char): Don't overwrite local variable char
	when describing characters with display-table entries.  Display font
	backend when describing composed characters.  Simplify: use `let'